--- a/post/templates/post/snippets/post_list_body_2.html
+++ b/post/templates/post/snippets/post_list_body_2.html
@@ -505,3 +505,9 @@
 {% endfor %}
 {% include 'snippets/csrftoken.html' %}
 {% include 'blog/snippets/readlist_js.html' %}
+
+<script>
+  removeElementsByClass('thumbnail-li');
+  document.getElementById("id_image").value = null;
+  document.getElementById("tweet-box").innerHTML = "";
+</script>
