add preloader htmx

--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -13,7 +13,7 @@
   <div style="width: 95%; margin: auto;">
       {% include 'post/snippets/post_list_tweet_box.html' %}
   </div>
-
+  {% include 'snippets/htmx_indicator.html' %}
   <div class="infinite-container" style="width: 95%; margin: auto;">
 
     <div id="post-content">
