--- a/templates/snippets/preloader_sub.html
+++ b/templates/snippets/preloader_sub.html
@@ -161,7 +161,7 @@
 {% endblock head %}
 
 <div id="preloader">
-    <div class="loader myloader htmx-indicator" style="width: 100% !important;">
+    <div class="loader myloader" style="width: 100% !important;">
         <div class="pl1">
             <div class="pl1__a"></div>
             <div class="pl1__b"></div>
