--- a/account/templates/account/snippets/account_list_qrep.html
+++ b/account/templates/account/snippets/account_list_qrep.html
@@ -46,8 +46,8 @@
         </a>
     
         <div>
-        <p class="post-name-color"><span style="color: mediumaquamarine;">Reply to : </span><strong>{{ result.post.title|safe }}</strong></p>
-        <p style="color: gainsboro;">{{ result.reply|striptags }}</p>
+        <p class="post-name-color"><span>Reply to : </span><strong>{{ result.post.title|safe }}</strong></p>
+        <p>{{ result.reply|striptags }}</p>
         </div>
     </div>
     <!-- Count -->
