--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -6,7 +6,7 @@
     font-size: 2.5rem;
     font-weight: 950;
     line-height: 1.5;
-    color: white;
+    
   }
   .heart {
       height: 29px;
@@ -30,7 +30,7 @@
 </style>
 {% endblock head %}
 {% block post %}
-<div class="container border p-3" style="border-radius: 10px; background-color: #000; color: #fff;">
+<div class="container border p-3" style="border-radius: 10px; background-color: #fff; color: #000;">
   <div class="pl-3 pr-3" style="width: 80%; margin: auto; overflow: hidden;">
     <h2 id="h2ost-title">{{post.title}}</h2>
     <div class="container">
