--- a/blog/templates/blog/snippets/blog_preview_body.html
+++ b/blog/templates/blog/snippets/blog_preview_body.html
@@ -8,7 +8,11 @@
                  <div class="r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-ipm5af r-13qz1uu">
                     <div aria-label="" class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-p1pxzi r-11wrixw r-61z16t r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010" style="margin-top: 0px;">
                        <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;{{image}}&quot;);"></div>
+                       {% if image %}
                        <img alt="" draggable="true" src="{{image}}" class="css-9pa8cd">
+                       {% else %}
+                       <img alt="" draggable="true" src="https://st4.depositphotos.com/14953852/22772/v/600/depositphotos_227725020-stock-illustration-no-image-available-icon-flat.jpg" class="css-9pa8cd">
+                       {% endif %}
                     </div>
                  </div>
               </div>
