--- a/marketplace/templates/marketplace/marketplace.html
+++ b/marketplace/templates/marketplace/marketplace.html
@@ -6,14 +6,14 @@
     .post-module {
         position: relative;
         display: block;
-        background: #000;
+        background: #fff;
         max-width: 400px;
         height: 500px;
         border-radius: 5px;
         box-shadow: 0px 0px 25px rgb(255, 255, 255);
         -webkit-box-shadow: 0px 1px 2px 0px rgba(255, 255, 255, 0.15);
         -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-        border: 2px solid antiquewhite;
+        border: 2px solid azure;
         -webkit-transition: all 0.3s linear 0s;
         -moz-transition: all 0.3s linear 0s;
         -ms-transition: all 0.3s linear 0s;
@@ -88,7 +88,7 @@
     .post-module .post-content {
         position: absolute;
         bottom: 0;
-        background: #000;
+        background: aliceblue ;
         width: 100%;
         padding: 15px;
         -webkti-box-sizing: border-box;
@@ -116,7 +116,7 @@
     .post-module .post-content .title {
         margin: 0;
         padding: 0 0 20px;
-        color: #fff;
+        /* color: #fff; */
         font-size: 20px;
         font-weight: 400;
         float: left;
@@ -125,7 +125,7 @@
     .post-module .post-content .price {
         margin: 0;
         padding: 0 0 10px;
-        color: darkseagreen;
+        /* color: darkseagreen; */
         font-size: 26px;
         font-weight: 700;
         float: left;
@@ -134,14 +134,14 @@
     .post-module .post-content .location {
         margin: 0;
         padding: 0 0 20px;
-        color: azure;
+        /* color: azure; */
         font-size: 16px;
         font-weight: 200;
     }
 
     .post-module .post-content .description {
         display: none;
-        color: blanchedalmond;
+        color: black;
         font-size: 16px;
         line-height: 1.8em;
     }
