--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -242,37 +242,5 @@
 
 </script>
 
-<script>
-  var imgUpload = document.getElementById("id_image");
-  var imgPreview = document.getElementById('thumbnail'), totalFiles;
-
-  imgUpload.addEventListener('change', previewImgs, false);
-  
-  function previewImgs(event){
-    removeElementsByClass('thumbnail-li');
-    totalFiles = imgUpload.files.length;
-    if(!!totalFiles) {
-      imgPreview.classList.remove('quote-imgs-thumbs--hidden');
-      
-    }
-
-    for(var i = 0; i < totalFiles; i++) {
-      li = document.createElement('li');
-      li.classList.add("thumbnail-li");
-      img = document.createElement('img');
-      img.src = URL.createObjectURL(event.target.files[i]);
-      img.style.width = "70px";
-      // img.onclick = changeImage(img);
-      li.appendChild(img)
-      imgPreview.appendChild(li);
-    }
-  }
-
-  function removeElementsByClass(className){
-    const elements = document.getElementsByClassName(className);
-    while(elements.length > 0){
-        elements[0].parentNode.removeChild(elements[0]);
-    }
-}
-</script>
+{% include 'post/snippets/js/showImgPreview.html' %}
 {% endblock javascript %}
