--- a/post/templates/post/snippets/post_detail_header.html
+++ b/post/templates/post/snippets/post_detail_header.html
@@ -1,6 +1,6 @@
 <style>
     .wrapper{
-      background: #000;
+      background: #fff;
       width: 100%;
       border-radius: 15px;
       padding: 25px 25px 15px 25px;
@@ -10,6 +10,6 @@
 
 <a href="{% url 'home' %}" style="text-decoration: none;">    
     <div class="wrapper mb-1">
-        <h3 style="color: aliceblue !important;">Back to Home</h3>
+        <h3>Back to Home</h3>
     </div>
 </a>
