--- a/post/templates/post/snippets/post_detail_new_comment.html
+++ b/post/templates/post/snippets/post_detail_new_comment.html
@@ -227,3 +227,8 @@
   </article>
 </div>
 {% endfor %}
+<script>
+  removeElementsByClass('thumbnail-li');
+  document.getElementById("id_image").value = null;
+  document.getElementById("tweet-box").innerHTML = "";
+</script>
