--- a/post/templates/post/snippets/tweet_style.html
+++ b/post/templates/post/snippets/tweet_style.html
@@ -37,11 +37,11 @@
 
 
     .post-name-color{
-        color: #fff;
+        color: #000;
     }
     .tweet-wrap {
       /*background: #fff;*/
-      background: #000;
+      background: #fff;
       /* border-radius:10px; */
       padding: 20px;
       border-bottom: 0.5px solid #e6ecf0;
@@ -50,6 +50,10 @@
       border-top: 0.5px solid #e6ecf0;
       /* border-top: 1px solid #e6ecf0; */
       /* box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white); */
+    }
+
+    .tw:hover{
+      background: rgba(235, 240, 235, 0.856);
     }
 
     .tweet-header {
