--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -44,7 +44,7 @@
              --greyDark: #9baacf;
         }
         body{
-            background: #000 !important;
+            background: #fff !important;
         }
     </style>
     {% include 'snippets/css/sidebar.css' %}
