--- a/templates/snippets/css/twitter_style.html
+++ b/templates/snippets/css/twitter_style.html
@@ -284,6 +284,12 @@
     .r-42olwf{
         border-color: rgba(0, 0, 0, 0);
     }
+    .r-14lw9ot {
+        background-color: rgb(255, 255, 255);
+    }
+    .r-18jsvk2 {
+        color: rgb(15, 20, 25);
+    }
     .r-sdzlij{
         border-radius: 9999px;
     }
@@ -555,11 +561,20 @@
     .r-1fmj7o5{
         color: rgb(217, 217, 217);
     }
+    .r-18jsvk2 {
+        color: rgb(15, 20, 25);
+    }
     .r-1ysxnx4{
     	background-color: rgb(21, 24, 28);
     }
+    .r-x572qd {
+        background-color: rgb(247, 249, 249);
+    }
     .r-k0dy70{
     	border-color: rgb(21, 24, 28);
+    }
+    .r-1d6w8o1 {
+        border-color: rgb(247, 249, 249);
     }
     .r-1ifxtd0{
     	margin-bottom: 16px;
