--- a/account/templates/account/snippets/blog_nav.html
+++ b/account/templates/account/snippets/blog_nav.html
@@ -27,7 +27,7 @@
  <div role="presentation" class="css-1dbjc4n r-16y2uox r-6b64d0 r-cpa5s6">
     <a hx-get="{% url 'account:load-blog-this-user' user_id=account.pk %}" hx-target="#contentTarget" aria-selected="false" role="tab" tabindex="-1" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1awozwy r-1loqt21 r-6koalj r-eqz5dr r-16y2uox r-1h3ijdo r-1777fci r-s8bhmr r-1ny4l3l r-1qhn6m8 r-i023vh r-o7ynqc r-6416eg">
        
-       <div dir="auto" class="css-901oao r-1fmj7o5 r-6koalj r-eqz5dr r-37j5jr r-a023e6 r-b88u0q r-1pi2tsx r-rjixqe r-bcqeeo r-1l7z4oj r-95jzfe r-bnwqim r-qvutc0">
+       <div dir="auto" class="css-901oao r-18jsvk2 r-6koalj r-eqz5dr r-37j5jr r-a023e6 r-b88u0q r-1pi2tsx r-rjixqe r-bcqeeo r-1l7z4oj r-95jzfe r-bnwqim r-qvutc0">
             <span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Blog</span>
             <div class="css-1dbjc4n r-1kihuf0 r-s224ru r-sdzlij r-1p0dtai r-xoduu5 r-hdaws3 r-s8bhmr r-u8s1d r-13qz1uu"></div>
         </div>
