--- a/forum/templates/forum/forum_home.html
+++ b/forum/templates/forum/forum_home.html
@@ -216,7 +216,7 @@
 
                 {% include 'forum/snippets/forum_home_header.html' %}
 
-                <div class="ibox-content forum-container" style="background-color: #000; box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);">
+                <div class="ibox-content forum-container" style="background-color: #fff; box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);">
                     {% include 'forum/snippets/forum_home_content.html' %}                
                 </div>
             </div>
