--- a/forum/templates/forum/snippets/css/forum_comment.html
+++ b/forum/templates/forum/snippets/css/forum_comment.html
@@ -23,12 +23,11 @@
 	    background-color: #fff;
 	    border: 1px solid transparent; /* Removes margin collapse */
 	    
-	    color: whitesmoke;
-	    background: #000;
+	    background: #fff;
         border-radius:10px;
 	    box-sizing: border-box;
 		
-		box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
+		box-shadow: 0 0 0.1rem var(--greyLight-2), 0 0 0.8rem var(--white);
 	}	
 	.m-0 {
 	    margin: 0;
@@ -77,7 +76,7 @@
 	    margin-left: 10px;
 	}
 	.comment-author {
-	    color: blanchedalmond;
+	    
 	    font-weight: bold;
 	    text-decoration: none;
 	}
