--- a/forum/templates/forum/snippets/css/tweet_box_css.html
+++ b/forum/templates/forum/snippets/css/tweet_box_css.html
@@ -37,12 +37,12 @@
 
 
     .tweet-wrap {
-      background: #000;
+      background: #fff;
       border-radius:10px;
       padding: 20px;
       border-bottom: 1px solid #e6ecf0;
       border-top: 1px solid #e6ecf0;
-      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
+      box-shadow: 0 0 0.1rem var(--greyLight-2), 0 0 0.8rem var(--white);
     }
 
     .tweet-header {
