--- a/forum/templates/forum/snippets/forum_detail/comments.html
+++ b/forum/templates/forum/snippets/forum_detail/comments.html
@@ -28,7 +28,7 @@
                         <a href="{% url 'account:view' user_id=reply.author.profile.pk %}" class="card-link">
                             <img src="{{reply.author.profile_image.url}}" class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" alt="User" />
                         </a>
-                        <a href="#" class="comment-author">{{reply.author.username}}</a>
+                        <a href="{% url 'account:view' user_id=reply.author.profile.pk %}" style="text-decoration: none; color: black;" class="comment-author">{{reply.author.username}}</a>
                         <span style="color: cadetblue;">replied {{ reply.created|naturaltime }} </span>
                         {% with point=reply.upvote.all.count|sub:reply.downvote.all.count %}
                         <p id="score-{{reply.pk}}" class="points {% if point > 0 %}up{% endif %} {% if point < 0 %}down{% endif %}"><span id="score-reply-{{reply.pk}}" style="color: azure;">{{point}}</span><span style="color: azure;"> points</span></p>
