--- a/forum/templates/forum/snippets/forum_detail_comment.html
+++ b/forum/templates/forum/snippets/forum_detail_comment.html
@@ -37,7 +37,7 @@
         </a>
         <div class="tweet-header-info">
             <div class="body-post" style="font-weight:normal; transform: rotate(0);">
-                <a href="{% url 'account:view' user_id=reply.0.author.profile.pk %}" class="text-secondary">{{reply.0.author.username}}</a><span>replied {{ reply.0.created_on|naturaltime }}</span>
+                <a href="{% url 'account:view' user_id=reply.0.author.profile.pk %}" class="text-secondary" style="text-decoration: none;">{{reply.0.author.username}}</a><span>replied {{ reply.0.created_on|naturaltime }}</span>
                 <small class="text-muted ml-2">({{reply.2}})</small>
                 <div class="mt-3 font-size-sm">
                     {% autoescape off %}
