--- a/forum/templates/forum/snippets/forum_detail_form.html
+++ b/forum/templates/forum/snippets/forum_detail_form.html
@@ -1,6 +1,6 @@
 <style>
     .wrapper{
-      background: #000;
+      background: #fff;
       width: 100%;
       border-radius: 15px;
       padding: 15px 15px 5px 15px;
