--- a/forum/templates/forum/snippets/forum_detail_post.html
+++ b/forum/templates/forum/snippets/forum_detail_post.html
@@ -27,12 +27,12 @@
             <div class="body-post" style="font-weight:normal; transform: rotate(0);">
                 <a href="{% url 'account:view' user_id=post.author.profile.pk %}" class="text-secondary">{{post.author.username}}</a><span>asked {{ post.created_on|naturaltime }}</span>
                 <small class="text-muted ml-2">({{post.created_on}})</small>
-                <h3 class="mt-3" style="color: peachpuff;">{{post.title}}</h3>
-                <span style="color: whitesmoke;">Viewed</span><span style="color: cornsilk;"> {{post.view}} times</span><span style="color: whitesmoke;">  |  Total Answer</span><span style="color: cornsilk;"> {{replies|length}}</span>
+                <h3 class="mt-3">{{post.title}}</h3>
+                <span>Viewed</span><span> {{post.view}} times</span><span>  |  Total Answer</span><span> {{replies|length}}</span>
                 <hr>
-                <div class="mt-3 font-size-sm">
+                <div class="mt-3 font-size-sm" style="padding-right: 18px;">
                     
-                    <p style="text-align: justify;text-justify: inter-word; color: whitesmoke;">{{post.body|striptags}}</p>
+                    <p style="text-align: justify;text-justify: inter-word;">{{post.body|striptags}}</p>
                     
                 </div>
             </div>
