--- a/forum/templates/forum/snippets/forum_header_back_to_home.html
+++ b/forum/templates/forum/snippets/forum_header_back_to_home.html
@@ -1,22 +1,22 @@
 <style>
     .wrapper{
-      background: #000;
+      background: #fff;
       width: 100%;
       border-radius: 15px;
       padding: 15px 15px 5px 15px;
-      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
+      box-shadow: 0 0 0.1rem var(--greyLight-2), 0 0 0.8rem var(--white);
     }
 </style>
 {% if type == 'content' %}
 <a href="{% url 'forum:forum-topic' %}" style="text-decoration: none;">
     <div class="wrapper mb-1">
-        <h3 style="color: aliceblue !important;">Back to Subject List</h3>
+        <h3>Back to Subject List</h3>
     </div>
 </a>
 {% else %}
 <a href="{% url 'forum:forum-content' post.subject.pk %}" style="text-decoration: none;">
     <div class="wrapper mb-1">
-        <h3 style="color: aliceblue !important;">Back to Discussion List</h3>
+        <h3>Back to Discussion List</h3>
     </div>
 </a>
 {% endif %}
