--- a/forum/templates/forum/snippets/forum_home_content.html
+++ b/forum/templates/forum/snippets/forum_home_content.html
@@ -13,7 +13,7 @@
                   <div class="css-1dbjc4n r-1wtj0ep r-ymttw5 r-1f1sjgu">
                      <h2 aria-level="2" role="heading" class="css-4rbku5 css-1dbjc4n r-18u37iz">
                         <div class="css-1dbjc4n r-k200y r-z80fyv r-1777fci r-1bymd8e"></div>
-                        <div dir="auto" class="css-901oao css-cens5h r-1habvwh r-1fmj7o5 r-16y2uox r-1wbh5a2 r-37j5jr r-adyw6z r-1vr29t4 r-1pi2tsx r-1777fci r-135wba7 r-bcqeeo r-qvutc0" style="-webkit-line-clamp: 3;"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Daftar Forum</span></div>
+                        <div dir="auto" class="css-901oao css-cens5h r-1habvwh r-18jsvk2 r-16y2uox r-1wbh5a2 r-37j5jr r-adyw6z r-1vr29t4 r-1pi2tsx r-1777fci r-135wba7 r-bcqeeo r-qvutc0" style="-webkit-line-clamp: 3;"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Daftar Forum</span></div>
                         <div class="css-1dbjc4n r-k200y r-z80fyv r-1777fci r-1bymd8e"></div>
                      </h2>
                   </div>
@@ -66,8 +66,8 @@
                                  <a href="{% url 'forum:forum-content' forum.0.pk %}" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1wbh5a2 r-dnmrzs r-1ny4l3l">
                                     <div class="css-1dbjc4n r-1wbh5a2 r-dnmrzs r-1ny4l3l">
                                        <div class="css-1dbjc4n r-1awozwy r-18u37iz r-dnmrzs">
-                                          <div dir="auto" class="css-901oao r-1awozwy r-1fmj7o5 r-6koalj r-37j5jr r-a023e6 r-b88u0q r-rjixqe r-bcqeeo r-1udh08x r-3s2u2q r-qvutc0"><span class="css-901oao css-16my406 css-bfa6kz r-poiln3 r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{forum.0.title}}</span></span></div>
-                                          <div dir="auto" class="css-901oao r-1fmj7o5 r-xoduu5 r-18u37iz r-1q142lx r-37j5jr r-a023e6 r-16dba41 r-rjixqe r-bcqeeo r-qvutc0"></div>
+                                          <div dir="auto" class="css-901oao r-1awozwy r-18jsvk2 r-6koalj r-37j5jr r-a023e6 r-b88u0q r-rjixqe r-bcqeeo r-1udh08x r-3s2u2q r-qvutc0"><span class="css-901oao css-16my406 css-bfa6kz r-poiln3 r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{forum.0.title}}</span></span></div>
+                                          <div dir="auto" class="css-901oao r-18jsvk2 r-xoduu5 r-18u37iz r-1q142lx r-37j5jr r-a023e6 r-16dba41 r-rjixqe r-bcqeeo r-qvutc0"></div>
                                        </div>
                                        <div class="css-1dbjc4n r-18u37iz r-1wbh5a2" >
                                           <div dir="ltr" class="css-901oao css-bfa6kz r-9ilb82 r-18u37iz r-37j5jr r-a023e6 r-16dba41 r-rjixqe r-bcqeeo r-qvutc0">
@@ -85,7 +85,7 @@
                                  </div>
                               </div>
                            </div>
-                           <div dir="auto" class="css-901oao r-1fmj7o5 r-37j5jr r-a023e6 r-16dba41 r-rjixqe r-bcqeeo r-1h8ys4a r-1jeg54m r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{forum.0.description}}</span>
+                           <div dir="auto" class="css-901oao r-18jsvk2 r-37j5jr r-a023e6 r-16dba41 r-rjixqe r-bcqeeo r-1h8ys4a r-1jeg54m r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{forum.0.description}}</span>
                            </div>
                         </div>
                      </div>
