--- a/forum/templates/forum/snippets/forum_home_header.html
+++ b/forum/templates/forum/snippets/forum_home_header.html
@@ -1,9 +1,9 @@
-<div class="ibox-content m-b-sm border-bottom" style="background-color: #000; box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);">
+<div class="ibox-content m-b-sm border-bottom" style="background-color: #fff; box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);">
     <div class="p-xs">
         <div class="pull-left m-r-md">
             <i class="fa fa-globe text-navy mid-icon"></i>
         </div>
-        <h2 style="color: beige;">Welcome to PNP forum</h2>
-        <span style="color: bisque;">Feel free to choose topic you're interested in.</span>
+        <h2>Welcome to PNP forum</h2>
+        <span>Feel free to choose topic you're interested in.</span>
     </div>
 </div>
