--- a/post/templates/post/snippets/post_detail_form.html
+++ b/post/templates/post/snippets/post_detail_form.html
@@ -9,7 +9,7 @@
       background: #1da1f2;
     }
     .wrapper{
-      background: #000;
+      background: #fff;
       width: 100%;
       border-radius: 15px;
       padding: 25px 25px 15px 25px;
@@ -32,7 +32,7 @@
       position: absolute;
       margin-top: -3px;
       font-size: 22px;
-      color: #98A5B1;
+      color: #adbcca;
       pointer-events: none;
     }
     .tweet-area .input{
@@ -139,27 +139,33 @@
 {% endblock head %}
 
 <div class="wrapper comment-form">  
-    <form onsubmit='return copyContent()' method= "post" hx-encoding="multipart/form-data" hx-post= "{% url 'post:post-detail' post.pk %}" hx-swap="innerHTML" hx-target = "#post-comment-content">
+    <form onsubmit='return copyContent()' method= "post" hx-encoding="multipart/form-data" hx-post= "{% url 'post:post-detail' post.pk %}" hx-swap="innerHTML" hx-target = "#post-comment-content" hx-indicator="#spinner">
     <div class="input-box">
       <div class="tweet-area">
         <span class="placeholder">Reply to this post</span>
         <textarea name="comment" id="hiddenTextarea" cols="30" rows="10" style="display: none;"></textarea>
-        <div class="input editable" contenteditable="true" spellcheck="false" id="tweet-box" style="color: #fff;"></div>
+        <div class="input editable" contenteditable="true" spellcheck="false" id="tweet-box" style="color: #000;"></div>
         <div class="input readonly" contenteditable="true" spellcheck="false"></div>
+        <div class="thumbnail_images">
+          <ul id="thumbnail">
+              
+          </ul>
+       </div>
       </div>
     </div>
     <div class="bottom">
       <ul class="icons">
-        <li><i class="uil uil-capture"></i></li>
+        
         <li>
             <label for="id_image">
               <i class="far fa-file-image"></i>
             </label>
             <input type="file" id="id_image" class="clearablefileinput" name="image" multiple="" accept="image/*" style="display: none;">
         </li>
+        <!-- <li><i class="uil uil-capture"></i></li>
         <li><i class="fas fa-map-marker-alt"></i></li>
         <li><i class="far fa-grin"></i></li>
-        <li><i class="far fa-user"></i></li>
+        <li><i class="far fa-user"></i></li> -->
       </ul>
       <div class="content">
         <span class="counter">100</span>
