--- a/post/templates/post/snippets/post_detail_reply_count.html
+++ b/post/templates/post/snippets/post_detail_reply_count.html
@@ -1,15 +1,15 @@
 <style>
     .wrapper{
-      color: aliceblue !important;
-      background: #000;
+      color: #000;
+      background: #fff;
       width: 100%;
       border-radius: 15px;
       padding: 25px 25px 15px 25px;
-      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
+      box-shadow: 0 0 0.1rem var(--greyLight-2), 0 0 0.8rem var(--white);
     }
 </style>
 <div style="margin-bottom: 5px;">
     <div class="wrapper">
-        <h3 style="color: aliceblue !important;">Replies : <span id="count-reply">{{comments|length}}</span></h3>
+        <h3>Replies : <span id="count-reply">{{comments|length}}</span></h3>
     </div>
 </div>
