--- a/post/templates/post/snippets/post_list_body_2.html
+++ b/post/templates/post/snippets/post_list_body_2.html
@@ -5,12 +5,12 @@
 {% for result in results %}
     {% if forloop.last %}
     {% if results.has_next %}
-    <div class="tweet-wrap" hx-get="{% url 'home' %}?page={{ results.next_page_number }}" hx-trigger="revealed" hx-swap="afterend" hx-target="this">
+    <div class="tweet-wrap tw" hx-get="{% url 'home' %}?page={{ results.next_page_number }}" hx-trigger="revealed" hx-swap="afterend" hx-target="this">
     {% else %}
-    <div class="tweet-wrap">
+    <div class="tweet-wrap tw">
     {% endif %}
     {% else %}
-    <div class="tweet-wrap">
+    <div class="tweet-wrap tw">
     {% endif %}
 
     <!-- <div class="tweet-wrap infinite-item "> -->
@@ -180,11 +180,15 @@
           <div class="css-1dbjc4n">
             <div class="css-1dbjc4n r-1ta3fxp r-18u37iz r-1wtj0ep r-1s2bzr4 r-1mdbhws">
               <div class="css-1dbjc4n r-18u37iz r-1h0z5md">
+                <a href="{% url 'post:post-detail' result.pk %}" style="text-decoration: none;">
+                  <span style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;z-index: 1;"></span> 
+                </a>
                 <div class="css-18t94o4 css-1dbjc4n r-1777fci r-bt1l66 r-1ny4l3l r-bztko3 r-lrvibr">
                   <div class="css-901oao r-1awozwy r-9ilb82 r-6koalj r-37j5jr r-a023e6 r-16dba41 r-1h0z5md r-rjixqe r-bcqeeo r-o7ynqc r-clp7b1 r-3s2u2q r-qvutc0 comment-hoverable">
                     <div class="css-1dbjc4n r-xoduu5">
                       <svg class="feather feather-message-circle sc-dnqmqq jxshSx r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
                     </div>
+                    
                     <div class="css-1dbjc4n r-xoduu5 r-1udh08x">
                       <span style="padding-right: 12px; padding-left: 12px;">{{result.comment_parent.count}}</span>
                     </div>
