--- a/templates/snippets/css/sidebar.css
+++ b/templates/snippets/css/sidebar.css
@@ -23,7 +23,7 @@
     /* --------- */
 
     #accordian {
-        background: #000;
+        background: #fff;
         width: 100%;
         /* padding: 10px; */
         float: left;
@@ -50,7 +50,7 @@
     }
 
     #accordian ul li a{
-        color: #fff;
+        color: #000;
         text-decoration: none;
         font-size: 20px;
         display: block;
