--- a/templates/snippets/right-sidebar.html
+++ b/templates/snippets/right-sidebar.html
@@ -8,7 +8,7 @@
   }
 </style>
 
-<div class="css-1dbjc4n r-1ysxnx4 r-k0dy70 r-1867qdf r-1phboty r-rs99b7 r-1ifxtd0 r-1udh08x htmx" id="right-nav">
+<div class="css-1dbjc4n r-x572qd r-1d6w8o1 r-1867qdf r-1phboty r-rs99b7 r-1ifxtd0 r-1udh08x htmx" id="right-nav">
    <div class="css-1dbjc4n">
       <div class="css-1dbjc4n">
          <section aria-labelledby="accessible-list-38" role="region" class="css-1dbjc4n">
@@ -19,7 +19,7 @@
                         <div class="css-1dbjc4n r-1wtj0ep r-ymttw5 r-1f1sjgu">
                            <h2 aria-level="2" role="heading" class="css-4rbku5 css-1dbjc4n r-18u37iz">
                               <div class="css-1dbjc4n r-k200y r-z80fyv r-1777fci r-1bymd8e"></div>
-                              <div dir="auto" class="css-901oao css-cens5h r-1habvwh r-1fmj7o5 r-16y2uox r-1wbh5a2 r-37j5jr r-adyw6z r-1vr29t4 r-1pi2tsx r-1777fci r-135wba7 r-bcqeeo r-qvutc0" style="-webkit-line-clamp: 3;"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Reading List</span></div>
+                              <div dir="auto" class="css-901oao css-cens5h r-1habvwh r-18jsvk2 r-16y2uox r-1wbh5a2 r-37j5jr r-adyw6z r-1vr29t4 r-1pi2tsx r-1777fci r-135wba7 r-bcqeeo r-qvutc0" style="-webkit-line-clamp: 3;"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Reading List</span></div>
                               <!-- Not needed? -->
                               <div class="css-1dbjc4n r-k200y r-z80fyv r-1777fci r-1bymd8e" hx-get="{% url 'forum:change-right-nav-1'%}" hx-target="#right-nav" hx-swap="outerHTML swap:0.5s">
                                 <div dir="auto" class="css-901oao r-1awozwy r-6koalj r-18u37iz r-16y2uox r-37j5jr r-a023e6 r-b88u0q r-1777fci r-rjixqe r-bcqeeo r-q4m81j r-qvutc0" style="color: rgb(239, 243, 244);">
@@ -46,7 +46,7 @@
                                  <div class="css-1dbjc4n r-1d09ksm r-18u37iz r-1wbh5a2">
                                     <div dir="auto" class="css-901oao r-9ilb82 r-37j5jr r-n6v787 r-16dba41 r-1cwl3u0 r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{obj.author.profile.fullname}}</span></div>
                                  </div>
-                                 <div dir="ltr" class="css-901oao r-1fmj7o5 r-37j5jr r-a023e6 r-b88u0q r-rjixqe r-bcqeeo r-vmopo1 r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{obj.title}}</span></div>
+                                 <div dir="ltr" class="css-901oao r-18jsvk2 r-37j5jr r-a023e6 r-b88u0q r-rjixqe r-bcqeeo r-vmopo1 r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{obj.title}}</span></div>
                                  <div dir="ltr" class="css-901oao r-9ilb82 r-37j5jr r-n6v787 r-16dba41 r-1cwl3u0 r-14gqq1x r-bcqeeo r-qvutc0" data-testid="metadata" hx-get="{% url 'blog:load-blog-span-sidebar' obj.pk %}" hx-trigger="load">
                                   <span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">7.135 Tweet</span>
                                  </div>
@@ -78,7 +78,7 @@
                            <div tabindex="0" class="css-1dbjc4n r-1loqt21 r-6koalj r-1ny4l3l r-ymttw5 r-1f1sjgu r-o7ynqc r-6416eg hoverable" data-testid="trend" role="link">
                               <div class="css-1dbjc4n r-16y2uox r-bnwqim">
                                  <div class="css-1dbjc4n r-1d09ksm r-18u37iz r-1wbh5a2">
-                                    <div dir="auto" class="css-901oao r-9ilb82 r-37j5jr r-n6v787 r-16dba41 r-1cwl3u0 r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">No reading list yet</span></div>
+                                    <div dir="auto" class="css-901oao r-9ilb82 r-37j5jr r-n6v787 r-16dba41 r-1cwl3u0 r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">No reading list yet. Click next button for other view</span></div>
                                  </div>
                                  
                               </div>
